karnc/tests/fixtures/negative/100_http_path_param_not_stringy/src/svc.karn
context svc

service api {
  on http GET "/orders/:id" (id: Int) -> Effect[HttpResult[String]] {
    Ok("nope")
  }
}
